--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -1,5 +1,11 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  color: #fff;
+}
+
+body {
   font-family:
     -apple-system,
     BlinkMacSystemFont,
@@ -14,6 +20,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #000030;
+}
+
+#root {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  background-image: url('../images/Whangaehu-dark.png');
+  background-position-x: right;
+  background-repeat: no-repeat;
+  background-size: 50% 100%;
 }
 
 .d-flex {
