Finish Home component

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -33,6 +33,14 @@ body {
   background-size: 50% 100%;
 }
 
+.right {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  width: 50%;
+  justify-content: center;
+}
+
 .d-flex {
   display: flex;
 }
