--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -41,6 +41,34 @@ body {
   justify-content: center;
 }
 
+h2 {
+  margin-bottom: 20px;
+}
+
+.box {
+  padding: 20px;
+  background: rgba(0, 0, 48, 0.4);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  height: 80%;
+}
+
+.quote {
+  font-size: 40px;
+  font-style: italic;
+}
+
+.author {
+  margin-top: 30px;
+  font-size: 30px;
+}
+
+p {
+  margin-bottom: 30px;
+}
+
 .d-flex {
   display: flex;
 }
@@ -72,6 +100,7 @@ body {
 }
 
 .btn {
+  color: #000;
   text-align: center;
   border: solid #d0d0d0 1px;
   font-size: 25px;
