--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -47,7 +47,7 @@ h2 {
 
 .box {
   padding: 20px;
-  background: rgba(0, 0, 48, 0.4);
+  background: rgba(0, 0, 48, 0.8);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-radius: 10px;
@@ -82,17 +82,27 @@ p {
 }
 
 .w-700 {
-  width: 700px;
+  width: 400px;
+}
+
+.border {
+  border-radius: 0 0 15px 15px;
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(23, 24, 26, 0.8);
 }
 
 .display {
-  background: #848492;
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(23, 24, 26, 0.8);
   height: 100px;
   color: #fff;
   font-weight: bold;
   font-size: 70px;
   padding: 10px;
   text-align: right;
+  border-radius: 15px 15px 0 0;
 }
 
 .row {
@@ -100,8 +110,10 @@ p {
 }
 
 .btn {
-  color: #000;
+  color: #c4e4fc;
   text-align: center;
-  border: solid #d0d0d0 1px;
+  border: solid #313237 1px;
+  border-radius: 15px;
+  margin: 6px;
   font-size: 25px;
 }
