--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -90,6 +90,7 @@ p {
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgba(23, 24, 26, 0.8);
+  padding: 10px 30px;
 }
 
 .display {
@@ -100,7 +101,7 @@ p {
   color: #fff;
   font-weight: bold;
   font-size: 70px;
-  padding: 10px;
+  padding: 10px 30px;
   text-align: right;
   border-radius: 15px 15px 0 0;
 }
@@ -114,6 +115,6 @@ p {
   text-align: center;
   border: solid #313237 1px;
   border-radius: 15px;
-  margin: 6px;
+  margin: 12px 6px;
   font-size: 25px;
 }
